# comp-vision

./: .gitignore  README.md  candy_object_detection.py  cv_classification.py  cv_plotting.py  cv_training.py  dataset_statistics.py  image_datasets.py  main.py  opencv.py  positions_basis_left.csv  positions_basis_right.csv  pyproject.toml  util.py
comp_vision/: cv_classification.py  cv_plotting.py  cv_statistics.py  cv_training.py  cv_typing.py  dataset_statistics.py
comp_vision/hamilton_positions/: position_assignments.py
datasets/wellplate_data/: classes.txt
datasets/wellplate_data/labels/: Screenshot 2026-05-12 at 4.41.29 PM.txt  Screenshot 2026-05-12 at 4.42.58PM.txt  Screenshot 2026-05-12 at 4.43.14PM.txt  Screenshot 2026-05-12 at 4.43.38PM.txt  Screenshot 2026-05-12 at 4.43.52PM.txt  Screenshot 2026-05-12 at 4.44.06PM.txt  Screenshot 2026-05-12 at 4.44.23PM.txt
examples/: candy_object_detection.py  fashion_mnist.py  food.py  object_detection.py
models/: finetuned_candy_model.pth  finetuned_coin_model.pth  finetuned_wellplate_model.pth
