[project]
name = "comp-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.9",
    "cvlib>=0.2.7",
    "jaxtyping>=0.3.10",
    "matplotlib>=3.10.9",
    "mlxtend>=0.24.0",
    "numpy>=2.4.5",
    "opencv-python>=4.13.0.92",
    "pycocotools>=2.0.11",
    "requests>=2.34.2",
    "ruff>=0.15.14",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.9.0",
    "torchtyping>=0.1.5",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.60",
    "webcolors>=25.10.0",
]

[tool.ruff]
# Set the maximum line length to 100
line-length = 100
