[project]
name = "comp-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.9",
    "jaxtyping>=0.3.10",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "ruff>=0.15.14",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.9.0",
    "torchtyping>=0.1.5",
    "torchvision>=0.27.0",
]

[tool.ruff]
# Set the maximum line length to 100
line-length = 100
